objects/TriggerHandlerSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Handler__c</fullName>
        <description>Handler Class Name</description>
        <label>Handler</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingSequence__c</fullName>
        <label>Processing Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <label>sObject Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Trigger Handler Setting</label>
</CustomObject>